--- a/custom/plugins/SwagPaymentPayPalUnified/plugin.xml
+++ b/custom/plugins/SwagPaymentPayPalUnified/plugin.xml
@@ -5,12 +5,39 @@
     <label lang="de">PayPal</label>
     <label lang="en">PayPal</label>
 
-    <version>2.1.3</version>
+    <version>2.2.2</version>
     <copyright>(c) by shopware AG</copyright>
     <license>MIT</license>
     <link>http://store.shopware.com</link>
     <author>shopware AG</author>
-    <compatibility minVersion="5.2.0"/>
+    <compatibility minVersion="5.2.0" maxVersion="5.99.99"/>
+
+    <changelog version="2.2.2">
+        <changes lang="de">PT-10330 - Wenn die Bestellnummer mitgesendet wird, wird nun in einem Fehlerfall zur Abschlussseite, statt zur Zahlungsartenauswahlseite, umgeleitet;</changes>
+        <changes lang="en">PT-10330 - If the order number gets sent and an error occurs, a redirect to the finish page is done, instead of the payment method selection page;</changes>
+    </changelog>
+
+    <changelog version="2.2.1">
+        <changes lang="de">PT-10471 - Ajax Calls des Plugins verbessert;</changes>
+        <changes lang="en">PT-10471 - Improve ajax calls of the plugin;</changes>
+    </changelog>
+
+    <changelog version="2.2.0">
+        <changes lang="de">
+            PT-10162 - Die Sprache für den Express-Checkout kann jetzt bei Bedarf individuell eingestellt werden;
+            PT-10335 - Problem mit Bestellnummern mit Prefix in der PayPal Bestellübersicht behoben;
+            PT-10349 - Das Bundesland wird nun beim Express Checkout korrekt gespeichert;
+            PT-10371 - PayPal Dokument Erweiterungen werden nur noch geladen, wenn der richtige Dokumententyp ausgewählt wurde;
+            PT-10373 - Ajax Calls des Plugins verbessert;
+        </changes>
+        <changes lang="en">
+            PT-10162 - If required the locale code for the express checkout can now be set individually;
+            PT-10335 - Solved problem with order numbers with prefix in PayPal order overview;
+            PT-10349 - The country state is now saved correctly during express checkout;
+            PT-10371 - PayPal document extensions are only loaded if the correct document type has been selected;
+            PT-10373 - Improve ajax calls of the plugin;
+        </changes>
+    </changelog>
 
     <changelog version="2.1.3">
         <changes lang="de">
