--- a/custom/plugins/SwagGoogle/plugin.xml
+++ b/custom/plugins/SwagGoogle/plugin.xml
@@ -4,12 +4,22 @@
 
     <label lang="de">Google Services</label>
     <label lang="en">Google Services</label>
-    <version>3.1.3</version>
+    <version>3.1.5</version>
     <copyright>(c) by Shopware AG</copyright>
     <license>MIT</license>
     <link>http://store.shopware.com</link>
     <author>Shopware AG</author>
     <compatibility minVersion="5.5.0" maxVersion="5.99.99"/>
+
+    <changelog version="3.1.5">
+        <changes lang="de">PT-11243 - Behebt Fehler im Conversion Tracking;</changes>
+        <changes lang="en">PT-11243 - Fix error in conversion tracking;</changes>
+    </changelog>
+
+    <changelog version="3.1.4">
+        <changes lang="de">PT-11085 - Kompatibilität mit Cookie Consent Tool;</changes>
+        <changes lang="en">PT-11085 - Compatibility with cookie consent tool;</changes>
+    </changelog>
 
     <changelog version="3.1.3">
         <changes lang="de">
