--- a/custom/plugins/SwagPaymentPayPalUnified/plugin.xml
+++ b/custom/plugins/SwagPaymentPayPalUnified/plugin.xml
@@ -5,12 +5,38 @@
     <label lang="de">PayPal</label>
     <label lang="en">PayPal</label>
 
-    <version>2.6.5</version>
+    <version>2.8.0</version>
     <copyright>(c) by shopware AG</copyright>
     <license>MIT</license>
     <link>http://store.shopware.com</link>
     <author>shopware AG</author>
     <compatibility minVersion="5.2.0" maxVersion="5.99.99"/>
+
+    <changelog version="2.8.0">
+        <changes lang="de">
+            PT-11491 - PayPal-Cookies zum Consent-Manager hinzugefügt;
+        </changes>
+        <changes lang="en">
+            PT-11491 - Add PayPal cookies to consent manager;
+        </changes>
+    </changelog>
+
+    <changelog version="2.7.0">
+        <changes lang="de">
+            PT-10536 - Behebt Anzeigefehler des Logos in Bestellbestätigungsmail;
+            PT-11361 - Entfernt Werbung für Kostenlose Retouren;
+            PT-11469 - Shop-Einstellungen werden im Firefox wieder korrekt geladen;
+            PT-11574 - Behebt Fehler des Express-Checkout-Buttons in Produkt-Listings;
+            PT-11575 - Javascript auf der Bestellbestätigungsseite verbessert, wenn der In-Context Modus benutzt wird;
+        </changes>
+        <changes lang="en">
+            PT-10536 - Fixes display error of logo in order confirmation mail;
+            PT-11361 - Remove free return advertising;
+            PT-11469 - Shop settings are loaded correctly in Firefox again;
+            PT-11574 - Fixes error of Express Checkout button in product listings;
+            PT-11575 - Improve Javascript on confirm page, if in-context mode is used;
+        </changes>
+    </changelog>
 
     <changelog version="2.6.5">
         <changes lang="de">Erweiterbarkeit durch Dritt-Plugins verbessert;</changes>
