--- a/custom/plugins/SwagTax/Resources/snippets/backend/swag_tax/main.ini
+++ b/custom/plugins/SwagTax/Resources/snippets/backend/swag_tax/main.ini
@@ -22,6 +22,9 @@ fourth_card/execute/btn = "Execute now (batch mode)"
 fourth_card/schedule/title = "Schedule"
 fourth_card/text = "Finally, determine whether the changes should be applied immediately or only take effect at a later point.<br><br>Select a date and time for the planned execution. It is also important that the Cron plug-in is active and configured.<br><br>When the changes are executed, the http cache is also cleared."
 
+fourth_card/confirm/title = "Change taxes"
+fourth_card/confirm/message = "Do you really want to change the tax rates now?"
+
 customer_group_mapping/fieldLabel = "Select customer group"
 customer_group_mapping/column/name = "Customer group"
 customer_group_mapping/column/key = "Customer group key"
@@ -32,6 +35,10 @@ tax_mapping/column/id = "ID"
 tax_mapping/column/name = "Selected tax"
 tax_mapping/column/tax = "New tax rate"
 tax_mapping/text = "Select the tax rates that you want to adjust from the drop-down menu. After you have added the desired tax rates, you can enter the new tax rate in the column \"New tax value\".This will not overwrite the existing tax rates, but will create new entries. In addition, any existing tax rules will be adopted. If there are different values in the rules, please check them in the basic settings."
+
+still_used/product = "This tax rate is still used in products. Please reload the page"
+still_used/dispatch = "This tax rate is still used in shipping methods. Please reload the page"
+still_used/voucher = "This tax rate is still used in vouchers. Please reload the page"
 
 [de_DE]
 title = "Steuern ändern"
@@ -56,6 +63,8 @@ fourth_card/execute/title = "Ausführen"
 fourth_card/execute/btn = "Jetzt ausführen (Batch Mode)"
 fourth_card/schedule/title = "Planen"
 fourth_card/text = "Legen Sie abschließend fest, ob die Änderungen sofort angewendet oder erst später wirksam werden sollen.<br><br>Für die geplante Ausführung wählen Sie ein Datum und eine Uhrzeit aus. Beachten Sie, dass dazu das Plugin “Cron” installiert und aktiviert sein muss.<br><br>Wenn die Änderungen ausgeführt werden, wird zusätzlich der http-Cache geleert."
+fourth_card/confirm/title = "Steuern ändern"
+fourth_card/confirm/message = "Sind Sie sicher, dass Sie die Steuersätze jetzt ändern möchten?"
 
 customer_group_mapping/fieldLabel = "Kundengruppe auswählen"
 customer_group_mapping/column/name = "Kundengruppe"
@@ -67,3 +76,7 @@ tax_mapping/column/id = "ID"
 tax_mapping/column/name = "Ausgewählte Steuern"
 tax_mapping/column/tax = "Neuer Steuerwert"
 tax_mapping/text = "Wählen Sie im Dropdown-Menü aus, welche der vorhandenen Steuersätze angepasst werden sollen. Nachdem Sie die gewünschten Steuersätze hinzugefügt haben, können Sie in der Spalte \"Neuer Steuerwert\" den neuen Steuersatz eintragen.<br><br>Es werden hierbei nicht die bisherigen Steuersätze überschrieben, sondern neue Einträge erstellt. Zusätzlich werden die ggfs. vorhandenen Steuerregeln übernommen. Sollten in den Regeln also abweichende Werte vorhanden sein, prüfen Sie diese bitte im Anschluss in den Grundeinstellungen."
+
+still_used/product = "Dieser Steuersatz wird noch in Produkten verwendet. Bitte die Seite neuladen."
+still_used/dispatch = "Dieser Steuersatz wird noch in Versandarten verwendet. Bitte die Seite neuladen."
+still_used/voucher = "Dieser Steuersatz wird noch in Gutscheinen verwendet. Bitte die Seite neuladen."
