--- a/custom/plugins/SwagPaymentPayPalUnified/plugin.xml
+++ b/custom/plugins/SwagPaymentPayPalUnified/plugin.xml
@@ -5,12 +5,28 @@
     <label lang="de">PayPal</label>
     <label lang="en">PayPal</label>
 
-    <version>2.8.0</version>
+    <version>2.8.1</version>
     <copyright>(c) by shopware AG</copyright>
     <license>MIT</license>
     <link>http://store.shopware.com</link>
     <author>shopware AG</author>
     <compatibility minVersion="5.2.0" maxVersion="5.99.99"/>
+
+    <description lang="de">Dieses Modul bietet Ihnen die beliebtesten PayPal-Produkte aus einer Hand: Den PayPal Express-Button, PayPal PLUS, und Banner für die neue PayPal Ratenzahlung. Und das Beste daran: Mit diesem Modul können Sie alle Produkte einzeln oder gleichzeitig in Ihrem Online-Shop nutzen.</description>
+    <description lang="en">This module offers you the most popular PayPal products from a single source: the PayPal Express button, PayPal PLUS, and banners for the new PayPal Installment Payment. And best of all, this module lets you use all products individually or simultaneously in your online store.</description>
+
+    <changelog version="2.8.1">
+        <changes lang="de">
+            PT-11760 - Behebt Fehler während der installation über den "Shopware First Run Wizard";
+            PT-11763 - Behebt fehlerhaftes Verhalten des Express-Checkout Buttons;
+            PT-11782 - Optimiert PayPal Link in Bestellbestätigungsmail;
+        </changes>
+        <changes lang="en">
+            PT-11760 - Fixes error during installation via the "Shopware First Run Wizard";
+            PT-11763 - Fixes incorrect behavior of the Express Checkout Button;
+            PT-11782 - Optimizes PayPal link in order confirmation email;
+        </changes>
+    </changelog>
 
     <changelog version="2.8.0">
         <changes lang="de">
